2003-06-16  Pierre-Luc Paour <gallery@paour.com> (1.1-b5)

	* Truncating long URLs in UI to make it nicer when CMS URLs are
	  used.
	* Added UI for rotating pictures before upload. Actual rotation
	  of pictures not implemented yet: only thumbnails.
	* Added icons on most buttons and menu items.

2003-06-13  Pierre-Luc Paour <gallery@paour.com> (1.1-b4)

	* Reorganized event handling and data modeling for more
	  simplicity and robustness. Phewww...
	* Fixed creating top-level albums in some cases.
	* Fixed logging out.
	* Can now create a first album when no Album is available.
	* Removed the Username and password fields in MainFrame.
	* Preferences can be invoked in such a way that it jumps
	  to a panel immediately.
	* Fixed losing caption when selecting more than one picture.
	* Fixed drag-n-dropping folders.
	* Unhacked list selection.
	* Modified HTTPConnection so it can be instanciated on Java 1.3
	  even though https is not supported.

2003-06-12  Pierre-Luc Paour <gallery@paour.com> (1.1-b3)

	* Preference property names are now constants in PreferenceNames rather
	  than just text litterals.
	* Added proxy support in the preferences.
	* Explicit HTTPS support (see the ReadMe).
	* Optionally strips the extension when using filename for caption.

2003-06-04  Pierre-Luc Paour <gallery@paour.com> (1.1-b2)

	* Added Upload, URLs, Proxy prefs panel.
	* Time in the logs is now in ms since application launch.
	* Sorted preferences files, for better readability.
	* Now pre-loading thumbnails and accurate file size when opening
	  saved state.
	* Reworked the Gallery class for more consistency and robustness.
	* Proxy panel is not yet functional.
	* Logging on to a PostNuke-embedded Gallery fails (I need help with this).
	* Fixed dialog centering code.

2003-05-08  Pierre-Luc Paour <gallery@paour.com> (1.1-b1)

	* Added first embryo of a preferences dialog.

2003-05-25  Pierre-Luc Paour <gallery@paour.com> (1.0.1-b6)
