@@ -61,7 +61,7 @@ code {
 <h1 align="center">Gallery Remote ReadMe</h1>
 <p>Version: 1.1<br>
   Last modified: 
-  <!-- #BeginDate format:Am1 -->June 13, 2003<!-- #EndDate -->
+  <!-- #BeginDate format:Am1 -->June 16, 2003<!-- #EndDate -->
 </p>
 <h2 align="left">Contents</h2>
   
@@ -166,6 +166,12 @@ toSysOut=true</pre>
   allow external tools to automatically generate projects that can then be loaded 
   into Gallery Remote.</p>
 <p>JSX is licensed under the GPL.</p>
+<h3>Jpegtran</h3>
+<p>The Win32 version of Jpegtran, compiled and patched by <a href="http://sylvana.net/jpegcrop/">Guido 
+  Vollbeding</a> is bundled. We use Jpegtran to rotate pictures before upload. 
+  In the future, it may also be used to crop pictures.</p>
+<p>Jpegtran doesn't appear to have any particular license, but is obviously redistributable, 
+  since it comes with most Linux distributions. Guido's version is freely downloadable.</p>
 <h2><a name="problems"></a>Known problems</h2>
 <p>There are many, I am sure.</p>
 <p>Right now, the lack of out of the box support for ImageMagick on non-Windows 
