@@ -35,7 +35,11 @@ public class GalleryFileFilter extends FileFilter {
 	public static String[] ext1
 		= { "gif", "jpeg", "jpg", "png" };
 	public static final List manipulateExtensions = Arrays.asList( ext1 );
-	
+
+	public static String[] ext2
+		= { "jpg", "png" };
+	public static final List manipulateJpegExtensions = Arrays.asList( ext2 );
+
 	// Accept all directories and all gif, jpg files.
 	public boolean accept(File f) {
 		if (f.isDirectory()) {
@@ -49,10 +53,16 @@ public class GalleryFileFilter extends FileFilter {
 	
 	public static boolean canManipulate(String filename) {
 		String extension = getExtension(filename);
-		
+
 		return ( extension != null && manipulateExtensions.contains(extension) );
 	}
-	
+
+	public static boolean canManipulateJpeg(String filename) {
+		String extension = getExtension(filename);
+
+		return ( extension != null && manipulateJpegExtensions.contains(extension) );
+	}
+
 	// The description of this filter
 	public String getDescription() {
 		return "Gallery Items";
