@@ -1,5 +1,5 @@
 /*
- * Gallery Remote - a File Upload Utility for Gallery 
+ * Gallery Remote - a File Upload Utility for Gallery
  *
  * Gallery - a web based photo album viewer and editor
  * Copyright (C) 2000-2001 Bharat Mediratta
@@ -22,6 +22,7 @@
 package com.gallery.GalleryRemote;
 
 import com.gallery.GalleryRemote.util.ImageUtils;
+import com.gallery.GalleryRemote.model.Picture;
 
 import java.awt.Graphics;
 import java.awt.event.ComponentAdapter;
@@ -33,101 +34,95 @@ import javax.swing.ImageIcon;
 
 public class PreviewFrame extends javax.swing.JFrame {
 	public static final String MODULE = "PreviewFrame";
-	
+
 	SmartHashtable imageIcons = new SmartHashtable();
 	ImageIcon currentImage = null;
 	String currentImageFile = null;
+	Picture currentPicture = null;
 	PreviewLoader previewLoader = new PreviewLoader();
 	int previewCacheSize = 10;
-	
-	public void initComponents()
-	{
+
+	public void initComponents() {
 		setTitle("Preview");
-		
+
 		setIconImage(GalleryRemote.iconImage);
-		
+
 		setBounds(GalleryRemote.getInstance().properties.getPreviewBounds());
-		
-		addComponentListener(new ComponentAdapter()
-			{
-				public void componentResized(ComponentEvent e)
-				{
-					imageIcons.clear();
-				}
+
+		addComponentListener(new ComponentAdapter() {
+			public void componentResized(ComponentEvent e) {
+				imageIcons.clear();
 			}
-		);
-		
+		});
+
 		previewCacheSize = GalleryRemote.getInstance().properties.getIntProperty("previewCacheSize");
 	}
-	
-	public void paint(Graphics g)
-	{
+
+	public void paint(Graphics g) {
 		g.clearRect(0, 0, getSize().width, getSize().height);
-		
-		if (currentImage != null)
-		{
-			currentImage.paintIcon(getContentPane(), g, getRootPane().getLocation().x, getRootPane().getLocation().y);
+
+		if (currentImage != null) {
+			ImageIcon tmpImage = ImageUtils.rotateImageIcon(currentImage, currentPicture.getAngle(), currentPicture.isFlipped(), this);
+			tmpImage.paintIcon(getContentPane(), g, getRootPane().getLocation().x, getRootPane().getLocation().y);
 		}
 	}
-	
-	public void displayFile(String filename) {
-		if (filename == null)
-		{
+
+	public void displayFile(Picture picture) {
+		if (picture == null) {
 			currentImage = null;
 			currentImageFile = null;
-			
+			currentPicture = null;
+
 			repaint();
-		}
-		else if (! filename.equals(currentImageFile))
-		{
-			currentImageFile = filename;
+		} else {
+			String filename = picture.getSource().getPath();
 			
-			ImageIcon r = (ImageIcon) imageIcons.get(filename);
-			if (r != null) {
-				Log.log(Log.TRACE, MODULE, "Cache hit: " + filename);
-				currentImage = r;
-				repaint();
-			} else {
-				Log.log(Log.TRACE, MODULE, "Cache miss: " + filename);
-				previewLoader.loadPreview(filename);
+			if (!filename.equals(currentImageFile)) {
+				currentImageFile = filename;
+				currentPicture = picture;
+
+				ImageIcon r = (ImageIcon) imageIcons.get(filename);
+				if (r != null) {
+					Log.log(Log.TRACE, MODULE, "Cache hit: " + filename);
+					currentImage = r;
+					repaint();
+				} else {
+					Log.log(Log.TRACE, MODULE, "Cache miss: " + filename);
+					previewLoader.loadPreview(filename);
+				}
 			}
 		}
 	}
-	
-	public ImageIcon getSizedIconForce(String filename)	{
+
+	public ImageIcon getSizedIconForce(String filename) {
 		ImageIcon r = (ImageIcon) imageIcons.get(filename);
-		
-		if (r == null)
-		{
+
+		if (r == null) {
 			r = ImageUtils.load(
-				filename, 
-				getRootPane().getSize(), 
-				ImageUtils.PREVIEW );
-			
+					filename,
+					getRootPane().getSize(),
+					ImageUtils.PREVIEW);
+
 			Log.log(Log.TRACE, MODULE, "Adding to cache: " + filename);
 			imageIcons.put(filename, r);
 		}
-		
+
 		return r;
 	}
 
-	class PreviewLoader implements Runnable
-	{
+	class PreviewLoader implements Runnable {
 		String iFilename = null;
 		boolean stillRunning = false;
-		
-		public void run()
-		{
+
+		public void run() {
 			Log.log(Log.TRACE, MODULE, "Starting " + iFilename);
-			while (iFilename != null)
-			{
+			while (iFilename != null) {
 				String tmpFilename;
-				synchronized (iFilename)
-				{
+				synchronized (iFilename) {
 					tmpFilename = iFilename;
 					iFilename = null;
 				}
-				
+
 				currentImage = getSizedIconForce(tmpFilename);
 			}
 			stillRunning = false;
@@ -135,32 +130,28 @@ public class PreviewFrame extends javax.swing.JFrame {
 			repaint();
 			Log.log(Log.TRACE, MODULE, "Ending");
 		}
-		
-		public void loadPreview(String filename)
-		{
+
+		public void loadPreview(String filename) {
 			Log.log(Log.TRACE, MODULE, "loadPreview " + filename);
-			
+
 			iFilename = filename;
-			
-			if (! stillRunning)
-			{
+
+			if (!stillRunning) {
 				stillRunning = true;
-				Log.log(Log.TRACE, MODULE,"Calling Start");
+				Log.log(Log.TRACE, MODULE, "Calling Start");
 				new Thread(this).start();
 			}
 		}
 	}
-	
 
-	public class SmartHashtable extends Hashtable
-	{
+
+	public class SmartHashtable extends Hashtable {
 		Vector touchOrder = new Vector();
-		
-		public Object put(Object key, Object value)
-		{
+
+		public Object put(Object key, Object value) {
 			touch(key);
 			super.put(key, value);
-			
+
 			Log.log(Log.TRACE, MODULE, Runtime.getRuntime().freeMemory() + " - " + Runtime.getRuntime().totalMemory());
 			/*if (Runtime.getRuntime().freeMemory() < 2000000)
 			{
@@ -168,68 +159,60 @@ public class PreviewFrame extends javax.swing.JFrame {
 				shrink();
 				Runtime.getRuntime().gc();
 			}
-			else */if (previewCacheSize > 0 && touchOrder.size() > previewCacheSize)
-			{
+			else */if (previewCacheSize > 0 && touchOrder.size() > previewCacheSize) {
 				shrink();
 			}
 			Log.log(Log.TRACE, MODULE, Runtime.getRuntime().freeMemory() + " - " + Runtime.getRuntime().totalMemory());
-			
+
 			return value;
 		}
-		
-		public Object get(Object key)
-		{
+
+		public Object get(Object key) {
 			Object result = super.get(key);
-			
-			if (result != null)
-			{
+
+			if (result != null) {
 				touch(key);
 			}
-			
+
 			return result;
 		}
-		
-		public void clear()
-		{
+
+		public void clear() {
 			super.clear();
 			touchOrder.clear();
 		}
-		
-		public void touch(Object key)
-		{
+
+		public void touch(Object key) {
 			Log.log(Log.TRACE, MODULE, "touch " + key);
 			int i = touchOrder.indexOf(key);
-			
-			if (i != -1)
-			{
+
+			if (i != -1) {
 				touchOrder.remove(i);
 			}
 
 			touchOrder.add(key);
 		}
-		
-		public void shrink()
-		{
-			if (touchOrder.size() == 0)
-			{
+
+		public void shrink() {
+			if (touchOrder.size() == 0) {
 				Log.log(Log.ERROR, MODULE, "Empty SmartHashtable");
 				//throw new OutOfMemoryError();
 				return;
 			}
-			
+
 			Object key = touchOrder.elementAt(0);
 			touchOrder.remove(0);
-			
+
 			ImageIcon i = (ImageIcon) get(key);
 			if (i != null) {
 				i.getImage().flush();
 				i = null;
 			}
-			
+
 			remove(key);
 
 			Runtime.getRuntime().gc();
-			
+
 			Log.log(Log.TRACE, MODULE, "Shrunk " + key);
 		}
 	}
