@@ -186,7 +186,7 @@ th {
   <tr valign="top"> 
     <td>Pre-upload rotate</td>
     <td>P3</td>
-    <td>0%</td>
+    <td>100%</td>
     <td>1.1</td>
     <td>paour</td>
     <td>Pictures can be rotated on the client.</td>
